MediathekView 14.3.0
The new release no longer builds a fat JAR, so we update the manifest
to install all dependency JARs and extend the launch script to set an
appropriate classpath.